# document-rag-ai-agent

./: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/326777bc-aee9-4998-8843-53fdadf7e3e4/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/32f90c06-6bb6-4a60-b4a8-d713a3aa8210/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/32f90c06-6bb6-4a60-b4a8-d713a3aa8210/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/8ccd0de6-c0df-4516-95f3-2d9cc292e4f3/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/a8eb659c-b61a-44d5-b84a-43c24c3c1fed/payload_index/: IDENTITY  LOG  MANIFEST-000005
